--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,7 @@
 # Build settings
 permalink   : /blog/:year/:title/
 markdown    : kramdown
-highlighter : pygments
+highlighter : rouge
 
 paginate: 2 #6
 paginate_path: "/blog/page/:num/"
