--- a/_config.yml
+++ b/_config.yml
@@ -2,6 +2,8 @@
 permalink   : /blog/:year/:title/
 markdown    : kramdown
 highlighter : rouge
+# For local debug
+# highlighter : pygments
 
 paginate: 2 #6
 paginate_path: "/blog/page/:num/"
