--- a/_config.yml
+++ b/_config.yml
@@ -1,9 +1,9 @@
 # Build settings
 permalink   : /blog/:year/:title/
 markdown    : kramdown
-highlighter : rouge
+# highlighter : rouge
 # For local debug
-# highlighter : pygments
+highlighter : pygments
 
 paginate: 2 #6
 paginate_path: "/blog/page/:num/"
