--- a/_config.yml
+++ b/_config.yml
@@ -46,6 +46,34 @@ author:
   instagram: https://instagram.com/matheuscostavieira
   whatsapp: https://api.whatsapp.com/send?phone=5541988024599&text=E ae!
   phone: "5541988024599"
+  print-pt-br: "Opcionalmente remova o cabeçalho nas opções de impressão"
+  print-en-us: "Optionally remove header in print options"
+
+messages:
+  pt-br:
+    print-alert: "Opcionalmente remova o cabeçalho nas opções de impressão"
+    print-resume:
+      title:
+        goal: "Objetivo"
+        education: "Formação Acadêmica"
+        courses: "Cursos"
+        experiences: "Experiência"
+        institution: "Instituição"
+      goal: "Criar novos e melhores conceitos usando padrões de design e melhores práticas para o desenvolvimento de aplicativos.
+<br /> Fazendo uso de testes automatizados para garantir a qualidade do sistema.
+<br /> Tendo em mente a resolução do problema com a melhor experiência para o usuário."
+  en-us:
+    print-alert: "Optionally remove header in print options"
+    print-resume:
+      title:
+        goal: "Goal"
+        education: "Academic formation"
+        courses: "Courses"
+        experiences: "Experiences"
+        institution: "Institution"
+      goal: "Create new and better concepts using design patterns and best practices for the development of applications.
+<br /> Making use of automated tests to ensure the system quality.
+<br /> Keeping on mind the problem resolution with the best experience for the user."
 
 # navbar pages
 navbar:
@@ -63,5 +91,7 @@ navbar:
 collections:
  - graduations
  - experiences
+ - graduations-print
+ - experiences-print
 
 exclude: ["config.rb", "src", "Gemfile", "Gemfile.lock", "package.json","README.md", "Rakefile"]
