adicionado línguas faladas

--- a/_config.yml
+++ b/_config.yml
@@ -65,6 +65,7 @@ messages:
         course: "Curso"
         company: "Empresa"
         current: "Atual"
+        skills-idiom: "Idiomas"
         skills-languages: "Linguagens"
         skills-framework: "Frameworks"
         skills-others: "Outras"
@@ -85,6 +86,7 @@ messages:
         course: "Course"
         company: "Company"
         current: "Actual"
+        skills-idiom: "Speak"
         skills-languages: "Languages"
         skills-framework: "Frameworks"
         skills-others: "Others"
