--- a/_config.yml
+++ b/_config.yml
@@ -9,6 +9,8 @@ paginate_path: "/blog/page/:num/"
 comments: true
 
 incremental: true
+watch: true
+live_reload: true
 
 source: source
 destination: _site
@@ -28,6 +30,17 @@ site.google_analytics_container: GTM-TWNMZ5Q
 repo: https://github.com/matheus-vieira/matheus-vieira.github.io
 disqus_shortname: "matheuscostavieira"
 disqus_site_shortname: "matheuscostavieira"
+
+# Compress
+compress_html:
+  clippings: []
+  comments: []
+  endings: []
+  ignore:
+    envs: []
+  blanklines: false
+  profile: false
+  startings: []
 
 # Author settings
 author:
