--- a/_config.yml
+++ b/_config.yml
@@ -63,6 +63,7 @@ max_experiences: 4
 
 messages:
   pt-br:
+    page-title: Currículo
     print-alert: "Opcionalmente remova o cabeçalho nas opções de impressão"
     print-resume:
       location: "Curitiba- Paraná - Brasil"
@@ -84,6 +85,7 @@ messages:
 <br /> Fazendo uso de testes automatizados para garantir a qualidade do sistema.
 <br /> Tendo em mente a resolução do problema com a melhor experiência para o usuário."
   en-us:
+    page-title: Resume
     print-alert: "Optionally remove header in print options"
     print-resume:
       location: "Curitiba- Paraná - Brazil"
