--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 # Build settings
-permalink: /blog/:year/:title/
+permalink: /blog/:year/:categories/:title/
 markdown: kramdown
 highlighter: Rouge
 plugins: [jekyll-paginate]
