fix _config.yml file

--- a/_config.yml
+++ b/_config.yml
@@ -22,12 +22,12 @@ sass:
 title: FileProcessor
 description: "Here you can find some personal information, resume and blog from Matheus Costa Vieira"
 keywords: "Jekyll, personal information, resume, Matheus, Costa, Vieira, Matheus Costa Vieira, blog"
-url: https://end2endsystems.github.io/FileProcessor/
+url: http://matheus-vieira.github.io
 baseurl: ""
 
 google_analytics: UA-174941014-1
 site.google_analytics_container: GTM-TWNMZ5Q
-repo: https://github.com/End2EndSystems/FileProcessor
+repo: https://github.com/matheus-vieira/matheus-vieira.github.io
 disqus_shortname: "matheuscostavieira"
 disqus_site_shortname: "matheuscostavieira"
 
@@ -49,7 +49,7 @@ author:
   bio: "I love God, my wife, my son and my little daughter (an angel) and then I love to create programs!"
   thumb: /images/author.png
   email: matheus.costa.vieira@gmail.com
-  url: http://end2endsystems.github.io
+  url: http://matheus-vieira.github.io
   github: https://github.com/matheus-vieira
   twitter: https://twitter.com/macostavieira
   facebook: https://facebook.com/macovieira
@@ -110,8 +110,18 @@ messages:
 
 # navbar pages
 navbar:
-  - slug: Data Source
-    title: data-source
+  - slug: about
+    title: About
+  - slug: resume
+    title: Resume
+  - slug: blog
+    title: Blog
+  - slug: courses
+    title: Courses
+  - slug: study
+    title: Study
+  - slug: contact
+    title: Contact
 
 collections:
  - graduations
