make interview post more interactive

--- a/_config.yml
+++ b/_config.yml
@@ -161,9 +161,12 @@ navbar:
     title: Study
 
 collections:
-  - graduations
-  - experiences
-  - skills
+  graduations:
+  experiences:
+  skills:
+  interview_questions:
+    output: true
+    permalink: /interview_questions/:name/
 
 exclude:
   [
