--- a/_config.yml
+++ b/_config.yml
@@ -68,7 +68,7 @@ messages:
     page-title: Currículo
     print-alert: "Opcionalmente remova o cabeçalho nas opções de impressão"
     print-resume:
-      location: "Fazenda Rio Grande - Paraná - Brasil"
+      location: "São Paulo - SP - Brasil"
       title:
         goal: "Resumo Profissional"
         education: "Formação"
@@ -94,7 +94,7 @@ messages:
         version-control: "Controle de Versão"
         professional-goals: "Objetivos Profissionais"
       core-competencies-title: "Competências Essenciais"
-      goal: "Engenheiro de Software Sênior com muitos anos de experiência em projeto, desenvolvimento e manutenção de sistemas escaláveis ​​e de alto desempenho. Sólida expertise no ecossistema .NET, soluções em nuvem no Azure, frameworks front-end e melhores práticas de arquitetura de software. Experiência comprovada na liderança de equipes técnicas, criação de bibliotecas reutilizáveis, otimização de pipelines de CI/CD e entrega de soluções centradas no usuário, com testes automatizados e observabilidade em mente."
+      goal: "Engenheiro de Software Sênior com 16+ anos de experiência em projeto, desenvolvimento e manutenção de sistemas escaláveis ​​e de alto desempenho. Sólida expertise no ecossistema .NET, soluções em nuvem no Azure, frameworks front-end e melhores práticas de arquitetura de software. Experiência comprovada na liderança de equipes técnicas, criação de bibliotecas reutilizáveis, otimização de pipelines de CI/CD e entrega de soluções centradas no usuário, com testes automatizados e observabilidade em mente."
       backend-development: ".NET 8, .NET Core, Entity Framework Core, C#, Java, VB.NET, Python, COBOL, Delphi"
       frontend-development: "AngularJS, ReactJS, VueJS, KnockoutJS, JavaScript, HTML5, CSS3, Bootstrap"
       cloud-devops: "Azure (Functions, Durable Functions, Event Grid, SQL Databases, Blob Storage, Active Directory, AI Search), CI/CD (GitHub Actions, Azure Pipelines)"
@@ -108,7 +108,7 @@ messages:
     page-title: Resume
     print-alert: "Optionally remove header in print options"
     print-resume:
-      location: "Fazenda Rio Grande - Paraná - Brazil"
+      location: "São Paulo - SP - Brazil"
       title:
         goal: "Professional Summary"
         education: "Education"
@@ -134,7 +134,7 @@ messages:
         version-control: "Version Control"
         professional-goals: "Professional Goals"
       core-competencies-title: "Core Competencies"
-      goal: "Senior Software Engineer with many years of experience in designing, developing, and maintaining scalable and high-performance systems. Strong expertise in .NET ecosystem, cloud solutions on Azure, front-end frameworks, and software architecture best practices. Proven track record in leading technical teams, creating reusable libraries, optimizing CI/CD pipelines, and delivering user-centric solutions with automated testing and observability in mind."
+      goal: "Senior Software Engineer with 16+ years of experience in designing, developing, and maintaining scalable and high-performance systems. Strong expertise in .NET ecosystem, cloud solutions on Azure, front-end frameworks, and software architecture best practices. Proven track record in leading technical teams, creating reusable libraries, optimizing CI/CD pipelines, and delivering user-centric solutions with automated testing and observability in mind."
       backend-development: ".NET 8, .NET Core, Entity Framework Core, C#, Java, VB.NET, Python, COBOL, Delphi"
       frontend-development: "AngularJS, ReactJS, VueJS, KnockoutJS, JavaScript, HTML5, CSS3, Bootstrap"
       cloud-devops: "Azure (Functions, Durable Functions, Event Grid, SQL Databases, Blob Storage, Active Directory, AI Search), CI/CD (GitHub Actions, Azure Pipelines)"
@@ -162,6 +162,7 @@ navbar:
 
 collections:
   graduations:
+  languages:
   experiences:
   skills:
   interview_questions:
