--- a/_config.yml
+++ b/_config.yml
@@ -47,8 +47,7 @@ author:
   name: mvieira
   full-name: Matheus Costa Vieira
   job: Software Engineer
-  bio: "I love God, my wife, my son and my little daughter (an angel) and then I love to create programs!"
-  thumb: /images/author.png
+  bio: "17+ years turning curiosity into enterprise-scale solutions. From PHP beginnings to architecting global microservices at Dell & GFT. Founder of End2End Systems, where I help businesses transform digitally while working from my dream home in Fazenda Rio Grande."
   email: matheus.costa.vieira@gmail.com
   url: http://matheus-vieira.github.io
   github: https://github.com/matheus-vieira
