--- a/_config.yml
+++ b/_config.yml
@@ -19,7 +19,7 @@ sass:
   style: compressed # expanded
 
 # SEO settings
-title: Matheus Costa Vieira - Personal Page
+title: Matheus Costa Vieira - Senior Software Engineer, Dad & Husband
 description: "Here you can find some personal information, resume and blog from Matheus Costa Vieira"
 keywords: "Jekyll, personal information, resume, Matheus, Costa, Vieira, Matheus Costa Vieira, blog"
 url: http://matheus-vieira.github.io
@@ -47,7 +47,7 @@ author:
   name: mvieira
   full-name: Matheus Costa Vieira
   job: Software Engineer
-  bio: "17+ years turning curiosity into enterprise-scale solutions. From PHP beginnings to architecting global microservices at Dell & GFT. Founder of End2End Systems, where I help businesses transform digitally while working from my dream home in Fazenda Rio Grande."
+  bio: "17+ years turning curiosity into enterprise-scale solutions. From PHP beginnings to architecting global microservices. Founder of End2End Systems, where I help businesses transform digitally while working from my dream home in Fazenda Rio Grande."
   email: matheus.costa.vieira@gmail.com
   url: http://matheus-vieira.github.io
   github: https://github.com/matheus-vieira
