readd missing thumb property

--- a/_config.yml
+++ b/_config.yml
@@ -48,6 +48,7 @@ author:
   full-name: Matheus Costa Vieira
   job: Software Engineer
   bio: "17+ years turning curiosity into enterprise-scale solutions. From PHP beginnings to architecting global microservices. Founder of End2End Systems, where I help businesses transform digitally while working from my dream home in Fazenda Rio Grande."
+  thumb: /images/author.png
   email: matheus.costa.vieira@gmail.com
   url: http://matheus-vieira.github.io
   github: https://github.com/matheus-vieira
