feat: add dotenv support for Jekyll configuration management
- Implement custom dotenv plugin for Jekyll
- Migrate site configs to environment variables
- Add pagination configuration plugin
- Update .env.example with all variables
- Maintain full site functionality and backward compatibility

--- a/.env.example
+++ b/.env.example
@@ -4,6 +4,14 @@
 # Jekyll Environment
 JEKYLL_ENV=development
 
+# Site Configuration
+SITE_TITLE="Seu Nome - Sua Profissão"
+SITE_DESCRIPTION="Descrição do seu site"
+SITE_KEYWORDS="palavras, chave, para, seo"
+SITE_URL=http://seu-usuario.github.io
+SITE_BASEURL=""
+SITE_REPO=https://github.com/seu-usuario/seu-repositorio
+
 # GitHub Metadata
 GITHUB_REPOSITORY=seu-usuario/seu-repositorio
 GITHUB_USERNAME=seu-usuario
@@ -14,6 +22,85 @@ GOOGLE_TAG_MANAGER_ID=GTM-XXXXXXX
 
 # Comments
 DISQUS_SHORTNAME=seu-disqus-shortname
+
+# Blog Configuration
+BLOG_PAGINATE=5
+BLOG_PAGINATE_PATH=/blog/page/:num/
+BLOG_COMMENTS=true
+
+# Resume Configuration
+MAX_EXPERIENCES=4
+RESUME_LOCATION="Sua Cidade - Estado - País"
+
+# HTML Compression
+COMPRESS_HTML_PROFILE=false
+
+# Author Information
+AUTHOR_NAME=seu-nome
+AUTHOR_FULL_NAME="Seu Nome Completo"
+AUTHOR_JOB="Sua Profissão"
+AUTHOR_BIO="Sua biografia profissional aqui"
+AUTHOR_THUMB=/images/author.png
+AUTHOR_EMAIL=seu.email@example.com
+AUTHOR_PHONE=5511999999999
+AUTHOR_CELLPHONE="+55 11 9 99999999"
+
+# Social Media Links
+AUTHOR_GITHUB=https://github.com/seu-usuario
+AUTHOR_TWITTER=https://twitter.com/seu-usuario
+AUTHOR_FACEBOOK=https://facebook.com/seu-usuario
+AUTHOR_LINKEDIN=https://linkedin.com/in/seu-usuario
+AUTHOR_GPLUS=https://plus.google.com/+SeuNome
+AUTHOR_INSTAGRAM=https://instagram.com/seu-usuario
+AUTHOR_WHATSAPP=https://api.whatsapp.com/send?phone=5511999999999&text=Olá!
+
+# Jekyll Server Configuration
+JEKYLL_HOST=0.0.0.0
+JEKYLL_PORT=4000
+LIVERELOAD_PORT=35729
+
+# Build Configuration
+JEKYLL_INCREMENTAL=true
+JEKYLL_LIVERELOAD=true
+JEKYLL_DRAFTS=false
+JEKYLL_SOURCE=source
+JEKYLL_DESTINATION=_site
+
+# Jekyll Processing
+JEKYLL_MARKDOWN=kramdown
+JEKYLL_HIGHLIGHTER=Rouge
+JEKYLL_PERMALINK=/blog/:categories/:title/
+
+# SASS Configuration  
+SASS_STYLE=compressed
+AUTHOR_JOB="Sua Profissão"
+AUTHOR_BIO="Sua biografia profissional"
+AUTHOR_EMAIL=seu.email@example.com
+AUTHOR_PHONE=5511999999999
+AUTHOR_CELLPHONE="+55 11 9 99999999"
+AUTHOR_THUMB=/images/author.png
+
+# Social Media URLs
+AUTHOR_GITHUB=https://github.com/seu-usuario
+AUTHOR_TWITTER=https://twitter.com/seu-usuario
+AUTHOR_FACEBOOK=https://facebook.com/seu-usuario
+AUTHOR_LINKEDIN=https://linkedin.com/in/seu-usuario
+AUTHOR_GPLUS=https://plus.google.com/+SeuNome
+AUTHOR_INSTAGRAM=https://instagram.com/seu-usuario
+AUTHOR_WHATSAPP="https://api.whatsapp.com/send?phone=5511999999999&text=Olá!"
+
+# Blog Configuration
+BLOG_PAGINATE=5
+BLOG_PAGINATE_PATH="/blog/page/:num/"
+BLOG_COMMENTS=true
+
+# Resume Configuration
+MAX_EXPERIENCES=4
+RESUME_LOCATION="Sua Cidade - Estado - País"
+
+# Compress HTML Configuration
+COMPRESS_HTML_ENABLED=true
+COMPRESS_HTML_PROFILE=false
 
 # Server Configuration
 JEKYLL_HOST=0.0.0.0
