--- a/.gitignore
+++ b/.gitignore
@@ -16,3 +16,58 @@ monthly-posts-roadmap.md
 /.bundle/
 /vendor/bundle
 /lib/bundler/man/
+
+# Test suite related files
+tests/node_modules/
+tests/coverage/
+tests/test-results/
+tests/playwright-report/
+tests/playwright-report-integration/
+tests/*.log
+tests/.nyc_output/
+tests/mochawesome-report/
+tests/junit.xml
+tests/test-report.html
+tests/test-report.json
+tests/allure-results/
+tests/screenshots/
+tests/videos/
+
+# Test analysis reports and temporary files
+*TEST*.md
+*RELATORIO*.md
+*ANALISE*.md
+*STATUS*.md
+*TROUBLESHOOTING*.md
+*VERIFICACAO*.md
+*MULTILANGUAGE*.md
+*COVERAGE*.md
+test-output*.log
+*.ps1
+cleanup-tests.*
+diagnostico-tests.*
+final-validation.*
+run-*-tests.*
+debug-frontmatter.*
+
+# Node.js
+node_modules/
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+
+# IDE files
+.vscode/
+.idea/
+*.swp
+*.swo
+*~
+
+# OS generated files
+.DS_Store
+.DS_Store?
+._*
+.Spotlight-V100
+.Trashes
+ehthumbs.db
+Thumbs.db
